<resources>
    <string name="app_name">Majestic Life</string>
    <string name="plan">Plan</string>
    <string name="quests">Quests</string>
    <string name="skills">Skills</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="Edit">edit</string>
    <string name="Graph">graph</string>
    <string name="xp">XP</string>
    <string name="hp">HP</string>
    <string name="sp">SP</string>
    <string name="level">Level</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="password">password</string>
    <string name="change_account">Change Account</string>
    <string name="faaliats">Activities</string>
    <string name="editFaaliats">Edit Activities</string>
    <string name="name_colon">Name:</string>
    <string name="save">Save</string>
    <string name="add_new_activity">Add New Activity</string>
    <string name="add_new_skill">Add New Skill</string>
    <string name="yes">Yes</string>
    <string name="no">no</string>

    <string name="title_activity_loading">LoadingActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="king">King</string>
    <string name="queen">Queen</string>
</resources>
