<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.farazannajmi.majesticlife.EditOneFaaliatPopupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/EditOneF_avatar_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:onClick="UiElementsOnClick"
                app:srcCompat="@drawable/ic_quests"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/name_colon"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/EditOneF_name_editText"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="Embroidery"
                android:inputType="text"
                android:hint="name"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

            <NumberPicker
                android:id="@+id/EditOneF_xp_numberPicker"
                android:layout_width="50dp"
                android:layout_height="100dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/xp"
                android:textSize="18sp" />

            <NumberPicker
                android:id="@+id/EditOneF_hp_numberPicker"
                android:layout_width="50dp"
                android:layout_height="100dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/hp"
                android:textSize="18sp" />

            <NumberPicker
                android:id="@+id/EditOneF_sp_numberPicker"
                android:layout_width="50dp"
                android:layout_height="100dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/sp"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Skills:"
            android:textColor="@android:color/black"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"/>

        <Button
            android:id="@+id/EditOneF_addskill_btn"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="add skill"
            android:onClick="UiElementsOnClick"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <ListView
            android:id="@+id/EditOneF_skills_ListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

        <Button
            android:id="@+id/EditOneF_save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:onClick="UiElementsOnClick"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
