<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.farazannajmi.majesticlife.AccountManagementActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/AccountM_Level_img"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    app:srcCompat="@drawable/ic_circle"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:id="@+id/AccountM_Level_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="Level"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />
            </RelativeLayout>


            <ProgressBar
                android:id="@+id/AccountM_XpLevel_progBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/AccountM_HP_img"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    app:srcCompat="@drawable/ic_circle"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:id="@+id/AccountM_HP_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/hp"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />
            </RelativeLayout>


            <ProgressBar
                android:id="@+id/AccountM_HP_progBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/AccountM_SP_img"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    app:srcCompat="@drawable/ic_circle"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:id="@+id/AccountM_SP_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/sp"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />
            </RelativeLayout>

            <ProgressBar
                android:id="@+id/AccountM_SP_progBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/AccountM_Avatar_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/AccountM_Username_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <Button
            android:id="@+id/AccountM_Signup_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:onClick="UiElementsOnClick"
            android:text="@string/sign_up" />

        <TextView
            android:id="@+id/AccountM_or_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="or" />

        <Button
            android:id="@+id/AccountM_Login_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:onClick="UiElementsOnClick"
            android:text="@string/login" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
