<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.farazannajmi.majesticlife.AccountPackage.AvatarShopActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="My Majesty"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/AvatarShop_save_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:onClick="UiElementsOnClick"/>

            <TextView
                android:id="@+id/AvatarShop_Coins_txt"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="500"
                android:textAlignment="textEnd"
                android:textColor="@android:color/black"
                android:gravity="end" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:srcCompat="@drawable/ic_coin"
                tools:ignore="VectorDrawableCompat" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/AvatarShop_Back_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ava_back1"
                android:layout_centerInParent="true"/>
            <ImageView
                android:id="@+id/AvatarShop_skin_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ava_skin_white"
                android:layout_centerInParent="true"/>
            <ImageView
                android:id="@+id/AvatarShop_hair_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ava_queen"
                android:layout_centerInParent="true"/>
            <ImageView
                android:id="@+id/AvatarShop_cloth_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ava_cloth1"
                android:layout_centerInParent="true"/>
            <ImageView
                android:id="@+id/AvatarShop_eyes_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ava_eyes1"
                android:layout_centerInParent="true"/>
            <ImageView
                android:id="@+id/AvatarShop_mouth_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ava_mouth1"
                android:layout_centerInParent="true"/>
            <ImageView
                android:id="@+id/AvatarShop_crown_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ava_crown1"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/AvatarShop_king_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/king"
                android:onClick="onRadioButtonClicked" />

            <RadioButton
                android:id="@+id/AvatarShop_queen_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/queen"
                android:onClick="onRadioButtonClicked" />
        </RadioGroup>

        <GridView
            android:id="@+id/AvatarShop_gridview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:numColumns="3"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
