<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="344dp"
        android:layout_height="495dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Great Job! 👏"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/faaliatsColor3"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_margin="2dp">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/xp"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerInParent="true"
                        app:srcCompat="@drawable/ic_circle"
                        tools:ignore="VectorDrawableCompat" />

                    <TextView
                        android:id="@+id/gainedD_XpLevel_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="10"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />
                </RelativeLayout>

                <ProgressBar
                    android:id="@+id/gainedD_Xp_progBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:max="100" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_margin="2dp">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/hp"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerInParent="true"
                        app:srcCompat="@drawable/ic_circle"
                        tools:ignore="VectorDrawableCompat" />

                    <TextView
                        android:id="@+id/gainedD_HpLevel_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="10"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />
                </RelativeLayout>

                <ProgressBar
                    android:id="@+id/gainedD_Hp_progBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:max="100" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_margin="2dp">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/sp"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerInParent="true"
                        app:srcCompat="@drawable/ic_circle"
                        tools:ignore="VectorDrawableCompat" />

                    <TextView
                        android:id="@+id/gainedD_SpLevel_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="10"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />
                </RelativeLayout>

                <ProgressBar
                    android:id="@+id/gainedD_Sp_progBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:max="100" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>